adding formatting for machine data printing